# intcode-disasm

./: .gitignore  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  shell.nix  start.sh
.cargo/: config.toml
benches/: type_benchmark.rs
crates/analysis-server/: Cargo.toml
crates/analysis-server/src/: main.rs
crates/dsl_macros_impl/: Cargo.toml
crates/dsl_macros_impl/src/: dsl.rs  lib.rs  match_dsl_parser.rs
crates/model_macros_impl/: Cargo.toml
crates/model_macros_impl/src/: lib.rs
crates/model_macros_impl/tests/: basic_test.rs
crates/web-bridge/: Cargo.toml
crates/web-bridge/src/: lib.rs
crates/web-ui/: Cargo.toml  README.md  Trunk.toml  index.html
crates/web-ui/.cargo/: config.toml
crates/web-ui/src/: analysis.rs  demo.rs  lib.rs
crates/web-ui/src/components/: constraint_viewer.rs  function_view.rs  mod.rs  program_overview.rs  type_variable_table.rs
crates/web-ui/src/pages/: analyze.rs  function.rs  home.rs  mod.rs  types.rs
crates/web-ui/style/: main.css
data/: 25.symbols
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
model_macros/: Cargo.toml
model_macros/macro/: Cargo.toml
model_macros/macro/src/: dsl.rs  lib.rs
model_macros/src/: lib.rs
model_macros/tests/: basic_test.rs
src/: lib.rs  macros.rs  main.rs
src/disasm/: code_printer.rs  control_flow_graph.rs  data_flow_analysis.rs  low_ir.rs  mcp.rs  mid_flow.rs  mid_ir.rs  mid_transform.rs  mod.rs  model2.rs  parser.rs  program_analysis.rs  repl.rs  ssa_form.rs  symbol_renaming.rs  test_utils.rs  type_inference.rs  vm.rs
src/disasm/hlr/: ast.rs  mod.rs  optimization.rs  pretty_print.rs  transformer.rs  visitor.rs
src/disasm/v2/: analysis.rs  control_flow.rs  data_flow.rs  dispatching.rs  events.rs  id_types.rs  instructions.rs  integration_tests.rs  mod.rs  model.rs  native.rs  pretty_print.rs  ssa_form.rs  type_inference.rs
src/disasm/v2/listeners/: control_flow_analyzer.rs  control_flow_analyzer_tests.rs  control_flow_builder.rs  control_flow_graph_builder.rs  data_flow_analyzer.rs  function_call_analyzer.rs  hlr_optimization.rs  hlr_optimizer.rs  image_scanner.rs  mod.rs  ssa_converter.rs  type_inference_analyzer.rs  variable_analyzer.rs
src/disasm/v2/listeners/type_inference/: analyzer.rs  constraints.rs  mod.rs  result.rs  tests.rs  types.rs  visuals.rs
src/disasm/v2/listeners/variable_analyzer/: disjoint_set.rs
src/disasm/v2/type_inference/: analyzer.rs  constraints.rs  mod.rs  result.rs  solver.rs  tests.rs  types.rs  visuals.rs
src/disasm/v3/: analysis.rs  id_types.rs  mod.rs  model.rs  model_macros.rs  pretty_print.rs  structure_analysis.rs
src/disasm/v3/cfg/: block.rs  builder.rs  function.rs  result.rs  tests.rs
src/disasm/v3/common/: expression.rs  function_call.rs  memory_reference.rs  mod.rs  span.rs  view.rs
src/disasm/v3/common/formatting/: colors.rs  mod.rs  pretty_print.rs  (+1 more)
src/disasm/v3/control_flow/: block.rs  builder.rs  control_flow_analyzer.rs  function.rs  mod.rs  result.rs  tests.rs
src/disasm/v3/data_flow/: analyzer.rs  block.rs  mod.rs  result.rs  tests.rs
src/disasm/v3/folded_ssa/: builder.rs  mod.rs  result.rs  tests.rs
src/disasm/v3/function_call/: analyzer.rs  mod.rs  result.rs
src/disasm/v3/image_scanner/: mod.rs  result.rs  scanner.rs  tests.rs
src/disasm/v3/lir/: converter.rs  expression.rs  instruction.rs  macros.rs  memory_reference.rs  mod.rs  paths.rs
src/disasm/v3/listeners/: mod.rs
src/disasm/v3/native/: instruction.rs  mod.rs  operand.rs
src/disasm/v3/ssa/: block.rs  converter.rs  dsl.rs  dsl_tests.rs  mod.rs  result.rs  tests.rs  types.rs
src/disasm/v3/type_inference/: README.md  analyzer.rs  constraints.rs  constraints_generator.rs  mod.rs  query_engine.rs  result.rs  solver.rs  type_bounds_map.rs  type_inference_extra.rs  type_inference_tests.rs  type_interval.rs  types.rs
src/disasm/v3/variable_analyzer/: mod.rs  variable_merger.rs
src/docs/: conventions.md  machine_arch.md  migration.md  model_macro_plan.md  ssa.md
tests/: dsl_tests.rs
