[package]
name = "disasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.7"
itertools = "0.14.0"
log = "0.4.26"
nom = "8.0.0"
paste = "1.0.15"
pathfinding = "4.14.0"
petgraph = "0.8.1"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-log = "0.2.17"
