[package]
name = "disasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/model_macros_impl", "crates/dsl_macros_impl"]

[dependencies]
model_macros_impl = { path = "crates/model_macros_impl" }
dsl_macros_impl = { path = "crates/dsl_macros_impl" }
clap = { version = "4.5.32", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.7"
itertools = "0.14.0"
log = "0.4.26"
nom = "8.0.0"
paste = "1.0.15"
petgraph = "0.8.1"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
thiserror = "2.0.12"
castaway = "0.2.3"
either = "1.15.0"
rustyline = "16.0.0"
tabled = { version = "0.19.0", features = ["ansi"] }
term_size = "0.3.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-log = "0.2.17"

[lints.rust]

# [profile.dev]
# opt-level = 1
#
