[package]
name = "analysis-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main disasm library
disasm = { path = "../.." }
web-bridge = { path = "../web-bridge" }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"