[package]
name = "web-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Only include disasm for native compilation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
disasm = { path = "../.." }
log = "0.4"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"