[package]
name = "web-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Bridge to disasm library
web-bridge = { path = "../web-bridge" }

# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

# Web framework
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Utilities for web-only functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "File",
  "FileList",
  "FileReader",
  "Event",
  "EventTarget",
  "Window",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"